--- a/index.css
+++ b/index.css
@@ -1,19 +1,15 @@
-
-
 body {
     margin: 0;
 }
 
-.boxmodel h1{
-    background-color: rgb(255, 255, 255);
-    display: inline-block;
-    width: 90%;
-    margin-left: 20px;
-    height: 200px;
+
+.col {
+    background-color: gainsboro;
     margin-top: 20px;
-    position: relative;
-    border-radius: 5px;
-    box-shadow: 1px 1px 10px;
-    padding-top: 60px;
-    padding-left: 10px;
+    margin-bottom: 20px;
+    padding-top: 70px;
+    border-radius: 3px;
+    height: 200px;
+    text-align: left;
+    box-shadow: 2px 2px 2px;
 }
